<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="formpageviewmodel"
            type="com.wevois.surveyapproval.HouseDetailActivity" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="?attr/colorPrimary"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:popupTheme="@style/AppTheme.PopupOverlay">


                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="House Detail"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/BackBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_arrow_back_black_24dp"
                    android:textColor="@color/white"
                    android:textSize="22sp" />

            </androidx.appcompat.widget.Toolbar>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:id="@+id/txtName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="2.5"
                    android:layout_marginEnd="10dp"
                    android:text="Name : "
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="ram"
                    android:layout_weight="5.0"
                    android:layout_toRightOf="@+id/txtName"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:id="@+id/txtAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.5"
                    android:layout_gravity="left"
                    android:layout_marginEnd="10dp"
                    android:text="Address : "
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5.0"
                    android:layout_gravity="center"
                    android:text="ram"
                    android:layout_toRightOf="@+id/txtAddress"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:id="@+id/txtPhone"
                    android:layout_width="0dp"
                    android:layout_weight="2.5"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginEnd="10dp"
                    android:text="Mobile No: "
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvPhone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5.0"
                    android:layout_gravity="center"
                    android:text="ram"
                    android:layout_toRightOf="@+id/txtPhone"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="@+id/linearmobile"
                    app:layout_constraintStart_toStartOf="@+id/linearmobile"
                    app:layout_constraintTop_toBottomOf="@+id/linearmobile">

                    <RadioButton
                        android:id="@+id/radio_awasiye"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:checked="false"
                        android:text="@string/houses"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/radio_com"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:checked="false"
                        android:text="@string/business"
                        android:textSize="18sp" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/txtHouse"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.5"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    android:text="Entity Type : "
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/house_type_spinner"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="5.0"
                    android:background="@drawable/spinner_background_for_house_type" />


            </LinearLayout>


            <TextView
                android:id="@+id/tvNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:padding="05dp"
                android:layout_gravity="center"
                android:text="If all the Details are correct click on Verify Button"
                android:layout_toRightOf="@+id/txtHouse"
                android:textColor="@color/light_red"
                android:textSize="14sp"
                android:visibility="visible"/>


            <Button
                android:id="@+id/btnSaveDetails"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="0"
                android:background="@color/colorPrimary"
                android:text="@string/save_details"
                android:textColor="@color/white"
                android:textSize="17sp" />


        </LinearLayout>
    </ScrollView>
</layout>